# marauder-tui

./: CLAUDE.md  pyproject.toml
docs/plans/: 2026-02-08-marauder-tui-design.md
marauder/: __init__.py  app.py  engine.py  serial_bridge.py
marauder/screens/: attacks.py  dashboard.py  logs.py  serial_raw.py
marauder/widgets/: activity_feed.py  device_table.py  rssi_bar.py
