[project]
name = "marauder-tui"
version = "0.1.0"
description = "Terminal hacker UI for ESP32 Marauder"
requires-python = ">=3.9"
dependencies = [
    "textual>=0.89.0",
    "pyserial>=3.5",
]

[project.scripts]
marauder = "marauder.app:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
